<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">智能云台</string>
    <string name="hello_pan">dslr pan</string>
    <string name="action_settings">Settings</string>

    <string name="contact_male"> 男 </string>
    <string name="contact_female"> 女 </string>
    <string name="login_userphone_hint">请输入手机号</string>
    <string name="register_sms_code_hint">请输入短信验证码</string>
    <string name="ensurePasswordHint">请再次输入密码</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="ensurePassword">确认密码 </string>
    <string name="update_password_old_hint">请输入旧密码</string>
    <string name="update_password_new_hint">请输入新密码</string>
    <string name="update_password_new_ensure_hint">请再次输入新密码</string>
    <string name="register">注册</string>
     <string name="login">登录</string>
    <string name="login_rightnow">立即登录</string>
    <string name="register_rightnow">立即注册 &gt;</string>
    
        <string name="complete">完成</string>
    <string name="feedback_textstring">意见反馈</string>
    <string name="password_can_not_null">密码不能为空</string>
    <string name="username_cannot_null">用户名不能为空</string>
    <string name="password_not_consistent">输入的两次密码不一致</string>
    <string name="registerSucceed">注册成功</string>
    <string name="registerFailed">注册失败。</string>
    <string name="forget_password">忘记密码？</string>
    <string name="retrieve_password_userphone_hint">请输入您注册时填写的手机号码</string>
    <string name="next_step">下一步</string>
    <string name="request_sms_code">获取验证码</string>
    <string name="accept_service_terms">我已经阅读并接受</string>
    <string name="service_terms">《服务条款》</string>
    <string name="comeback">返回</string>
    <string name="register_succeed_tip">恭喜您,注册成功！</string>
    <string name="reset_ensure_assword_int">请再次输入新密码</string>
    <string name="reset_password_hint">请输入新密码</string>
    
     <string name="chat_pleaseCheckNetwork">请检查网络</string>
    <string name="chat_base_list_view_listEmptyHint">无数据</string>
    <string name="chat_base_list_view_noMore">已无更多</string>
    <string name="chat_utils_tips">提示</string>
    <string name="chat_utils_please_choose">请选择</string>
    <string name="chat_utils_share">分享</string>
    <string name="chat_utils_right">好的</string>
    <string name="chat_utils_hardLoading">努力加载中...</string>
</resources>
