<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/userphoneEdit"
        style="@style/Register_Edit"
        android:hint="@string/retrieve_password_userphone_hint"
        android:inputType="numberSigned" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/sms_code"
            style="@style/Register_Edit"
            android:layout_weight="1.0"
            android:hint="@string/register_sms_code_hint"
            android:inputType="numberSigned" />

        <Button
            android:id="@+id/request_sms_code_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/base_action_bar_height"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/common_gray_btn_selector"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/request_sms_code"
            android:textColor="#666666"
            android:textSize="18.5sp" />
    </LinearLayout>

     <EditText
        android:id="@+id/resetPasswordEdit"
        style="@style/Register_Edit"
        android:hint="@string/reset_password_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/ensureResetPasswordEdit"
        style="@style/Register_Edit"
        android:hint="@string/reset_ensure_assword_int"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_complete"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/base_action_bar_height"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_marginTop="20dp"
        android:background="@drawable/boyue_red_bg_selector"
        android:text="@string/complete"
        android:textColor="#fff"
        android:textSize="22sp" />
    
    <Button
        android:id="@+id/btn_next"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/base_action_bar_height"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_marginTop="20dp"
        android:background="@drawable/boyue_red_bg_selector"
        android:text="@string/next_step"
        android:textColor="#fff"
        android:textSize="22sp"
        android:visibility="gone" />

</LinearLayout>