<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/resetPasswordEdit"
        style="@style/Register_Edit"
        android:hint="@string/reset_password_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/ensureResetPasswordEdit"
        style="@style/Register_Edit"
        android:hint="@string/reset_ensure_assword_int"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_complete"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/base_action_bar_height"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_marginTop="20dp"
        android:background="@drawable/boyue_red_bg_selector"
        android:text="@string/complete"
        android:textColor="#fff"
        android:textSize="22sp" />

</LinearLayout>