<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f4f4f4" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/headerLayout"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical" >

            <AutoCompleteTextView
                android:id="@+id/et_username"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/base_action_bar_height"
                android:background="@drawable/common_edittext_bg"
                android:drawableLeft="@drawable/login_user_icon"
                android:drawablePadding="15dip"
                android:hint="@string/login_userphone_hint"
                android:singleLine="true"
                android:textColorHint="#a9a9a9" >

                <requestFocus />
            </AutoCompleteTextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/common_separation_line"
                android:visibility="gone" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/base_action_bar_height"
                android:layout_marginTop="5dp"
                android:background="@drawable/common_edittext_bg"
                android:drawableLeft="@drawable/login_password_icon"
                android:drawablePadding="15dip"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColorHint="#a9a9a9" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_action_bar_height"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="28sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/register_rightnow"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/btn_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/forget_password"
            android:textColor="#000"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>