<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_bg_color"
    android:orientation="vertical"
    android:paddingBottom="10dip" >

    <EditText
        android:id="@+id/userphoneEdit"
        style="@style/Register_Edit"
        android:inputType="numberSigned"
        android:hint="@string/login_userphone_hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/sms_code"
            style="@style/Register_Edit"
            android:layout_weight="1.0"
            android:inputType="numberSigned"
            android:hint="@string/register_sms_code_hint" />

        <Button
            android:id="@+id/request_sms_code_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/base_action_bar_height"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/common_gray_btn_selector"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/request_sms_code"
            android:textColor="#666666"
            android:textSize="18.5sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/passwordEdit"
        style="@style/Register_Edit"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/ensurePasswordEdit"
        style="@style/Register_Edit"
        android:hint="@string/ensurePasswordHint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/base_action_bar_height"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_marginTop="20dp"
        android:background="@drawable/boyue_red_bg_selector"
        android:text="@string/register"
        android:textColor="#fff"
        android:textSize="26sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/accept_provision_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/common_small_check_box_selector"
            android:button="@null"
            android:checked="true" />
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#a9a9a9"
            android:textSize="18.5sp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:text="@string/accept_service_terms"/>
        
        <TextView android:id="@+id/service_terms_textview" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#78b728"
            android:textSize="18.5sp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:text="@string/service_terms"/>
    </LinearLayout>

</LinearLayout><!--
    <LinearLayout style="@style/Register_Input">

        <TextView
            style="@style/My.TextView._Black"
            android:layout_width="@dimen/registerLeftWidth"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/chat_common_username" />

        <EditText
            android:id="@+id/usernameEdit"
            style="@style/Register_Edit"
            android:hint="@string/login_username_hint" />
    </LinearLayout>

    <LinearLayout style="@style/Register_Input">

        <TextView
            style="@style/My.TextView._Black"
            android:layout_width="@dimen/registerLeftWidth"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/entry_register_activity_password" />

        <EditText
            android:id="@+id/passwordEdit"
            style="@style/Register_Edit"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout style="@style/Register_Input">

        <TextView
            style="@style/My.TextView._Black"
            android:layout_width="@dimen/registerLeftWidth"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/ensurePassword" />

        <EditText
            android:id="@+id/ensurePasswordEdit"
            style="@style/Register_Edit"
            android:hint="@string/ensurePasswordHint"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout style="@style/Register_Input">

        <TextView
            style="@style/My.TextView._Black"
            android:layout_width="@dimen/registerLeftWidth"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/profile_sex" />

        <RadioGroup
            android:id="@+id/sexRadio"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/contact_male" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_female" />
        </RadioGroup>


    </LinearLayout>


    <Button
        android:id="@+id/btn_register"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/base_action_bar_height"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@drawable/common_btn"
        android:text="@string/register"
        android:textColor="@color/chat_base_color_text_white"
        android:textSize="@dimen/text_size_large" />-->
